SPRDT-423 address sonar issues