@@ -1,6 +1,7 @@
 package uk.gov.moj.cpp.courtscheduler.api.converter;
 
 import uk.gov.moj.cpp.courtscheduler.domain.AssignCourtroomRequest;
+import uk.gov.moj.cpp.courtscheduler.domain.RequestParameterConstant;
 
 import java.util.ArrayList;
 import java.util.List;
@@ -13,17 +14,18 @@ public class AssignCourtroomRequestConverter implements Converter<JsonObject, As
     public AssignCourtroomRequest convert(final JsonObject jsonObject) {
         List<String> courtScheduleIds = new ArrayList<>();
         
-        if (jsonObject.containsKey("courtScheduleIds") && jsonObject.get("courtScheduleIds") != null) {
-            JsonArray idsArray = jsonObject.getJsonArray("courtScheduleIds");
+        if (jsonObject.containsKey(RequestParameterConstant.COURT_SCHEDULE_IDS.getLabel()) && jsonObject.get(RequestParameterConstant.COURT_SCHEDULE_IDS.getLabel()) != null) {
+            JsonArray idsArray = jsonObject.getJsonArray(RequestParameterConstant.COURT_SCHEDULE_IDS.getLabel());
             if (idsArray != null) {
                 courtScheduleIds = idsArray.stream()
                         .map(value -> value.toString().replace("\"", ""))
-                        .collect(Collectors.toList());
+                        .toList();
+//                        .collect(Collectors.toList());
             }
         }
         
-        String courtRoomId = jsonObject.containsKey("courtRoomId") 
-                ? jsonObject.getString("courtRoomId", null) 
+        String courtRoomId = jsonObject.containsKey(RequestParameterConstant.COURT_ROOM.getLabel())
+                ? jsonObject.getString(RequestParameterConstant.COURT_ROOM.getLabel(), null)
                 : null;
 
         return AssignCourtroomRequest.AssignCourtroomRequestBuilder
